--- a/categorias/unidades-de-medida-abreviaturas-y-siglas.html
+++ b/categorias/unidades-de-medida-abreviaturas-y-siglas.html
@@ -672,7 +672,7 @@
 
     <!-- Breadcrumb -->
     <div class="container breadcrumb">
-        <a href="index.html"><i class="fas fa-home"></i> Inicio</a>
+        <a href="https://glosarioescolar.github.io/Glosario"><i class="fas fa-home"></i> Inicio</a>
         <span>></span>
         <a href="#">Unidades de Medida, Abreviaturas y Siglas</a>
     </div>
@@ -687,7 +687,7 @@
                 <h2 class="category-title">Unidades de Medida, Abreviaturas y Siglas</h2>
                 <div class="term-count" id="term-count">Cargando términos...</div>
             </div>
-            <a href="index.html" class="back-to-home">
+            <a href="https://glosarioescolar.github.io/Glosario" class="back-to-home">
                 <i class="fas fa-arrow-left"></i> Volver al Inicio
             </a>
         </div>
