--- a/index.html
+++ b/index.html
@@ -635,7 +635,14 @@
             <p class="tagline">Tu recurso educativo con más de 200 términos técnicos explicados de manera clara y concisa. Perfecto para estudiantes e investigadores.</p>
         </div>
     </header>
-
+    
+<!-- Favicon -->
+<link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+<link rel="manifest" href="site.webmanifest">
+<link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+    
     <!-- Search Section -->
     <div class="container">
         <div class="search-section">
