--- a/categorias/conceptos-teoricos.html
+++ b/categorias/conceptos-teoricos.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conceptos Teóricos - Glosario Técnico</title>
-    <!-- Favicon -->
-<link rel="apple-touch-icon" sizes="180x180" href="Glosario/assets/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="Glosario/assets/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="Glosario/assets/favicon-16x16.png">
-<link rel="manifest" href="Glosario/assets/site.webmanifest">
-<link rel="shortcut icon" href="Glosario/assets/favicon.ico" type="image/x-icon">
+<!-- Favicon -->
+<link rel="apple-touch-icon" sizes="180x180" href="../assets/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon-16x16.png">
+<link rel="manifest" href="../assets/site.webmanifest">
+<link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
