--- a/index.html
+++ b/index.html
@@ -1388,12 +1388,13 @@
             </div>
         </div>
 
-        <!-- Featured Terms -->
+        <!-- Discover Terms -->
         <div class="terms-section fade-in">
             <div class="category-header" style="margin-bottom: 30px;">
-                <h2><i class="fas fa-star"></i> Términos Destacados</h2>
-                <button id="refresh-terms" class="back-to-home" style="margin: 0;">
-                    <i class="fas fa-sync-alt"></i> Mostrar más
+                <h2><i class="fas fa-dice"></i> Descubre Términos</h2>
+                <button id="refresh-terms" class="category-link"
+                    style="border: none; cursor: pointer; font-size: 1rem;">
+                    <i class="fas fa-sync-alt"></i> Mostrar otros
                 </button>
             </div>
 
@@ -1424,9 +1425,10 @@
                     <ul class="footer-links">
                         <li><a href="https://glosarioescolar.github.io/Glosario/"><i class="fas fa-home"></i> Inicio</a>
                         </li>
-                        <li><a href="#"><i class="fas fa-list"></i> Todas las Categorías</a></li>
-                        <li><a href="#"><i class="fas fa-book"></i> Términos Recientes</a></li>
-                        <li><a href="#"><i class="fas fa-question-circle"></i> Ayuda</a></li>
+                        <li><a href="#categories-container"><i class="fas fa-list"></i> Todas las Categorías</a></li>
+                        <li><a href="#featured-terms"><i class="fas fa-dice"></i> Descubre Términos</a></li>
+                        <li><a href="mailto:carinacatalfamo@sanluis.edu.ar"><i class="fas fa-envelope"></i> Contacto</a>
+                        </li>
                     </ul>
                 </div>
 
