--- a/categorias/materiales-y-propiedades.html
+++ b/categorias/materiales-y-propiedades.html
@@ -7,6 +7,12 @@
     <title>Materiales y Propiedades - Glosario Técnico</title>
     <meta name="description" content="Propiedades físicas y químicas de materiales industriales.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon-16x16.png">
+    <link rel="shortcut icon" href="../assets/favicon.ico">
+    <link rel="manifest" href="../assets/site.webmanifest">
     <style>
 
         :root {
@@ -446,9 +452,16 @@
         .term-category {
             background: #e1f0fa;
             color: var(--secondary);
-            padding: 3px 10px;
+            padding: 4px 12px;
             border-radius: 20px;
             font-weight: 500;
+            font-size: 0.85rem;
+            display: inline-block;
+            max-width: 100%;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            vertical-align: middle;
         }
 
         .term-link {
@@ -1448,7 +1461,7 @@
                     <p>Aceite que, al variar su temperatura, mantiene su grado de viscosidad.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Viscosidad</a><a href="#">Ductilidad</a><a href="#">Cuarteado</a>
                     </div>
                 </div>
                 <div class="term-card fade-in-up">
@@ -1456,7 +1469,7 @@
                     <p>Aleación de hierro y carbono, con este último en un porcentaje de hasta el 2,1 %. En cambio, la fundición de hierro es la aleación de hierro y carbono, con este último en un porcentaje superior al 2,1 %.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Cementado</a><a href="#">Oxidación</a>
                     </div>
                 </div>
                 <div class="term-card fade-in-up">
@@ -1464,7 +1477,7 @@
                     <p>Material con la capacidad de aislar y evitar transferencia de calor, electricidad, etc. Por ejemplo, un aislante eléctrico es un material incapaz de conducir corrientes eléctricas.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Corriente</a><a href="#">Transferencia de calor</a><a href="#">Lubricante</a>
                     </div>
                 </div>
             </div>
@@ -1478,7 +1491,7 @@
                     <p>Materia orgánica que se puede convertir en energía eléctrica dependiendo del proceso posterior a su uso que se le pueda realizar. A partir de ella se pueden producir biocombustibles.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Aceite monogrado</a><a href="#">Gas refrigerante</a><a href="#">Rebaba</a>
                     </div>
                 </div>
             </div>
@@ -1492,7 +1505,7 @@
                     <p>Capacidad de un material para transmitir calor. Es un concepto fundamental en la ciencia de los materiales, ya que los metales tienen una alta conductividad térmica, mientras que los plásticos o la madera tienen baja conductividad.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Viscosidad</a><a href="#">Cuarteado</a><a href="#">Elasticidad</a>
                     </div>
                 </div>
                 <div class="term-card fade-in-up">
@@ -1500,7 +1513,7 @@
                     <p>Material que no opone resistencia a la energía eléctrica, permitiendo que esta circule libremente por dicho material.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Inductancia</a><a href="#">Resistencia</a>
                     </div>
                 </div>
                 <div class="term-card fade-in-up">
@@ -1508,7 +1521,7 @@
                     <p>Agrietamiento o fisuración de una superficie.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Filamento</a><a href="#">Ductilidad</a><a href="#">Efluentes</a>
                     </div>
                 </div>
             </div>
@@ -1522,7 +1535,7 @@
                     <p>Relación entre la masa y el volumen de un material.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Termosifón</a><a href="#">Lubricante</a><a href="#">Filamento</a>
                     </div>
                 </div>
                 <div class="term-card fade-in-up">
@@ -1530,7 +1543,7 @@
                     <p>Capacidad de un material para estirarse o alargarse sin romperse. Este término se aplica sobre todo en metales, como el cobre o el aluminio, pero también se usa en plásticos y materiales compuestos.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Flexibilidad</a><a href="#">Fragilidad</a><a href="#">Conductor eléctrico</a>
                     </div>
                 </div>
             </div>
@@ -1544,7 +1557,7 @@
                     <p>Cualquier líquido que es descargado o liberado.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Filamento</a><a href="#">Rebaba</a><a href="#">Inductancia</a>
                     </div>
                 </div>
                 <div class="term-card fade-in-up">
@@ -1552,7 +1565,7 @@
                     <p>Propiedad de un material para volver a su forma original después de haber sido deformado. En materiales como la goma o los metales, la elasticidad es fundamental para la flexibilidad.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Flexibilidad</a><a href="#">Cuarteado</a><a href="#">Rebaba</a>
                     </div>
                 </div>
             </div>
@@ -1566,7 +1579,7 @@
                     <p>Debilitamiento de un material por cargas repetidas. Se refiere a la disminución, con el paso del tiempo, de la resistencia de un elemento debido a esfuerzos cíclicos.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Resistencia</a><a href="#">Lubricante</a><a href="#">Acero</a>
                     </div>
                 </div>
                 <div class="term-card fade-in-up">
@@ -1574,7 +1587,7 @@
                     <p>Elemento conductor que genera calor o luz al ser atravesado por una corriente eléctrica, común en resistencias y lámparas.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Corriente</a><a href="#">Resistencia</a>
                     </div>
                 </div>
                 <div class="term-card fade-in-up">
@@ -1582,7 +1595,7 @@
                     <p>Capacidad de un material para doblarse sin romperse.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Elasticidad</a><a href="#">Biomasa</a><a href="#">Aislante</a>
                     </div>
                 </div>
                 <div class="term-card fade-in-up">
@@ -1590,7 +1603,7 @@
                     <p>Tendencia de un material a romperse fácilmente sin deformarse primero. Este término se aplica especialmente a materiales como el vidrio o cerámica.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Ductilidad</a><a href="#">Ignífugo</a><a href="#">Cuarteado</a>
                     </div>
                 </div>
             </div>
@@ -1604,7 +1617,7 @@
                     <p>Sustancia en forma gaseosa utilizada en sistemas de refrigeración para absorber y liberar calor durante su ciclo de compresión y expansión.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Fatiga</a><a href="#">Aislante</a><a href="#">Conductividad térmica</a>
                     </div>
                 </div>
             </div>
@@ -1618,7 +1631,7 @@
                     <p>Combustibles fósiles como el petróleo y el gas natural.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Rebaba</a><a href="#">Conductividad térmica</a><a href="#">Fatiga</a>
                     </div>
                 </div>
                 <div class="term-card fade-in-up">
@@ -1626,7 +1639,7 @@
                     <p>Hidrógeno producido mediante procesos de electrólisis impulsados por fuentes de energía renovables.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Electrólisis</a><a href="#">Energía renovable</a>
                     </div>
                 </div>
             </div>
@@ -1640,7 +1653,7 @@
                     <p>Material (tela, pintura, etc.) que no se inflama ni propaga la llama ni el fuego.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Rebaba</a><a href="#">Fragilidad</a><a href="#">Resistencia</a>
                     </div>
                 </div>
                 <div class="term-card fade-in-up">
@@ -1648,7 +1661,7 @@
                     <p>Propiedad de un conductor eléctrico que permite almacenar energía en un campo magnético.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Conductor eléctrico</a><a href="#">Elasticidad</a><a href="#">Fragilidad</a>
                     </div>
                 </div>
             </div>
@@ -1662,7 +1675,7 @@
                     <p>Aditivo que sirve para reducir la fricción entre dos piezas y actúa como aislante térmico. La acción de aplicar esta sustancia se denomina lubricado.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">NLGI</a><a href="#">Aislante</a>
                     </div>
                 </div>
             </div>
@@ -1676,7 +1689,7 @@
                     <p>Capacidad de un material para ser moldeado o aplanado sin romperse, como en el caso de metales que pueden ser martillados hasta convertirse en láminas.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Cuarteado</a><a href="#">Elasticidad</a><a href="#">Resistencia</a>
                     </div>
                 </div>
             </div>
@@ -1690,7 +1703,7 @@
                     <p>Proceso químico por el que un material, típicamente un metal, reacciona con el oxígeno del aire y forma óxido. Esto ocurre frecuentemente en hierro y acero, creando lo que conocemos como &#x27;herrumbre&#x27;.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Acero</a><a href="#">Cuarteado</a><a href="#">Conductor eléctrico</a>
                     </div>
                 </div>
             </div>
@@ -1704,7 +1717,7 @@
                     <p>Compuesto químico que funciona como aislante.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Aislante</a><a href="#">Densidad</a><a href="#">Conductor eléctrico</a>
                     </div>
                 </div>
             </div>
@@ -1718,7 +1731,7 @@
                     <p>Porción de material sobrante que sobresale en los bordes de un objeto. Por ejemplo, al amolar un metal, suele quedar un borde irregular y filoso que representa un riesgo.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Aceite monogrado</a><a href="#">Poliol</a><a href="#">Elasticidad</a>
                     </div>
                 </div>
                 <div class="term-card fade-in-up">
@@ -1726,7 +1739,7 @@
                     <p>Capacidad de un material para soportar fuerzas o cargas.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Alcación</a><a href="#">ISC</a><a href="#">Multímetro</a>
                     </div>
                 </div>
             </div>
@@ -1740,7 +1753,7 @@
                     <p>Recubrimiento de una capa de una superficie realizada con teflón con fines anti adherentes o anticorrosiva.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">Ignífugo</a><a href="#">Viscosidad</a><a href="#">Efluentes</a>
                     </div>
                 </div>
             </div>
@@ -1754,7 +1767,7 @@
                     <p>Resistencia de un líquido a fluir.</p>
                     <div class="related-terms">
                         <span><i class="fas fa-link"></i> Relacionados:</span>
-                        <a href="#">Materiales y Propiedades</a>
+                        <a href="#">NLGI</a><a href="#">Aceite monogrado</a><a href="#">Resistencia</a>
                     </div>
                 </div>
             </div>
