--- a/index.html
+++ b/index.html
@@ -455,11 +455,10 @@
             font-weight: 500;
             font-size: 0.85rem;
             display: inline-block;
-            max-width: 100%;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
+            max-width: fit-content;
+            word-break: break-word;
             vertical-align: middle;
+            border: 1px solid rgba(52, 152, 219, 0.2);
         }
 
         .term-link {
@@ -1403,8 +1402,10 @@
 
         <!-- Discover Terms -->
         <div class="terms-section fade-in">
-            <div class="category-header" style="margin-bottom: 30px;">
-                <h2><i class="fas fa-dice"></i> Descubre Términos</h2>
+            <div class="category-header"
+                style="margin-bottom: 30px; box-shadow: none; border-bottom: 2px solid var(--border-color); padding: 15px 0; background: transparent;">
+                <h2 style="text-shadow: none; margin: 0; display: flex; align-items: center; gap: 12px;"><i
+                        class="fas fa-dice" style="color: var(--secondary);"></i> Descubre Términos</h2>
                 <button id="refresh-terms" class="category-link"
                     style="border: none; cursor: pointer; font-size: 1rem;">
                     <i class="fas fa-sync-alt"></i> Mostrar otros
@@ -1704,7 +1705,7 @@
                                 ${term.category}
                             </span>
                         </div>
-                        <a href="${term.categoryPage}" class="term-link">
+                        <a href="${term.categoryPage}#term-${term.term.toLowerCase().replace(/[^a-z0-9]/g, '-')}" class="term-link">
                             Ver completo <i class="fas fa-arrow-right"></i>
                         </a>
                     </div>
